--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,7 +12,7 @@
     <hr>
     <div class="left-profile-div" >
         <img src="images/profile-pic.jpeg" class="rounded-circle img-thumbnail w-25 " alt="...">
-        <a href="#"> Ritik Mittal </a>
+        <a href="/"> <%= username %> </a>
     </div>
 </div>
 
