--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -28,27 +28,10 @@
             <div class="top-composer-text">
                 <input class="form-control form-control-lg " type="text" placeholder="Dear Diary">
                 <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Compose</a>
-
             </div>
         </div>
-
     </div>
     <hr>
-<!--    <div class="card" >-->
-<!--        <div class="card-header">-->
-<!--            <img src="images/profile-pic.jpeg" class="rounded-circle img-thumbnail card-img-icon" alt="...">-->
-<!--            <span>Sobhagya singh</span>-->
-<!--        </div>-->
-<!--        <div class="card-body">-->
-<!--            <p>What is Lorem Ipsum?</p>-->
-<!--            </p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>-->
-<!--        </div>-->
-<!--        <div class="card-footer bg-transparent card-footer ">-->
-<!--            <span><a href="#" class="icon-like"> <i class="far fa-heart"></i> </a></span>-->
-<!--            <span><a href="#" class="icon-comment"> <i class="far fa-comment"></i></a></span>-->
-<!--            <span><a href="#" class="icon-bookmark"> <i class="far fa-bookmark"></i></a></span>-->
-<!--        </div>-->
-<!--    </div>-->
     <div class="card" >
         <div class="card-header">
             <img src="images/profile-pic.jpeg" class="rounded-circle img-thumbnail card-img-icon" alt="...">
@@ -128,6 +111,11 @@
 <div class = "right-body">
     <div class="notice-icon">
         <span><i class="far fa-bell"></i></span>
+    </div>
+    <div class="lower-button" >
+        <form action="/logout" method="post">
+            <button type="submit" class="btn btn-primary btn-lg active">logout</button>
+        </form>
     </div>
 </div>
 
