--- a/views/newDiary.ejs
+++ b/views/newDiary.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header') %>
-<h1 style="float: left;"class="title"> author :<%=name %> </h1>
+<h1 style="float: left;"class="title"> author :<%= name %> </h1>
 <form action="/logout" method="get">
     <button style="float: right;" type="submit" class="btn btn-primary">logout</button>
 </form>
@@ -11,9 +11,9 @@
         <form class="" action="/newDiary" method="post">
 
             <label for="title">Diary Name</label>
-            <input type="text" id="title" class="form-control" name="title" value="">
+            <input type="text" id="title" class="form-control" name="diaryName" value="">
             <label for="Cotent" >Content</label>
-            <textarea name="content" id="Content" class="form-control" rows="10" cols="80"><%= content %></textarea>
+            <textarea name="content" id="Content" class="form-control" rows="10" cols="80">Write here</textarea>
             <br>
             <button type="submit" class="btn btn-lg btn-success" name="button">Write</button>
         </form>
