--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,11 +8,16 @@
         <a href="#" class="btn btn-primary btn-lg active left-navbar-button" role="button" aria-pressed="true">Explore</a>
         <a href="#" class="btn btn-primary btn-lg active left-navbar-button" role="button" aria-pressed="true">Massages</a>
         <a href="#" class="btn btn-primary btn-lg active left-navbar-button" role="button" aria-pressed="true">Bookmarks</a>
+        <% user.myDiaries.forEach((diaryId,inx) => { %>
+            <a href="/getDiary/<%= diaryId.diary_id %>" class="btn btn-primary btn-lg active left-navbar-button" role="button" aria-pressed="true">My Dairy <%=inx%></a>
+        <%}) %>
+         
+          <a href="#" class="btn btn-primary btn-lg active left-navbar-button" role="button" aria-pressed="true">Bookmarks</a>
     </div>
     <hr>
     <div class="left-profile-div" >
         <img src="images/profile-pic.jpeg" class="rounded-circle img-thumbnail w-25 " alt="...">
-        <a href="/"> <%= username %> </a>
+        <a href="/"> <%= user.name %> </a>
     </div>
 </div>
 
