--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -14,7 +14,7 @@
         <form class="" action="/compose" method="post">
             <label for="title">Select Diary</label>
 
-            <select >
+            <select name="diaryId">
                 <%  for(var i=0 ;i < diaries.length ;i++) { %>
                     <option value="<%= diaries[i] %>"> <%=  diaries[i] %></option>
                 <% } %>
