Basic Read and Write

--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -16,7 +16,7 @@
 
             <select name="diaryId">
                 <%  for(var i=0 ;i < diaries.length ;i++) { %>
-                    <option value="<%= diaries[i] %>"> <%=  diaries[i] %></option>
+                    <option value="<%= diaries[i].diary_id %>"> <%=  diaries[i].diary_id %></option>
                 <% } %>
             </select>
 
