Basic Read and Write

--- a/views/viewPage.ejs
+++ b/views/viewPage.ejs
@@ -34,7 +34,7 @@
             <p><%= page.content %> </p>
         </div>
         <div class="card-footer bg-transparent card-footer ">
-            <span><a href="#" class="icon-like"> <i class="far fa-heart"></i> </a></span>
+            <span><a href="" class="icon-like"> <i class="far fa-heart"></i> </a></span>
             <%= page.likes %>
             <span><a href="#" class="icon-comment"> <i class="far fa-comment"></i></a></span>
             <%= page.comments %>
