--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,18 +1,12 @@
 <%- include('partials/header'); -%>
 
 
-
 <div class = "left-body">
     <div class="left-navbar">
         <a href="#" class="btn btn-primary btn-lg active left-navbar-button" role="button" aria-pressed="true">Home</a>
         <a href="#" class="btn btn-primary btn-lg active left-navbar-button" role="button" aria-pressed="true">Explore</a>
         <a href="#" class="btn btn-primary btn-lg active left-navbar-button" role="button" aria-pressed="true">Massages</a>
         <a href="#" class="btn btn-primary btn-lg active left-navbar-button" role="button" aria-pressed="true">Bookmarks</a>
-        <% user.myDiaries.forEach((diaryId,inx) => { %>
-            <a href="/getDiary/<%= diaryId.diary_id %>" class="btn btn-primary btn-lg active left-navbar-button" role="button" aria-pressed="true">My Dairy <%=inx%></a>
-        <%}) %>
-         
-          <a href="#" class="btn btn-primary btn-lg active left-navbar-button" role="button" aria-pressed="true">Bookmarks</a>
     </div>
     <hr>
     <div class="left-profile-div" >
@@ -116,6 +110,14 @@
 <div class = "right-body">
     <div class="notice-icon">
         <span><i class="far fa-bell"></i></span>
+    </div>
+    <div>
+        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Dairies</button>
+        <div class="dropdown-menu">
+        <% user.myDiaries.forEach((diaryId,inx) => { %>
+                <a class="dropdown-item" href="/getDiary/<%= diaryId.diary_id %>" > My Dairy <%=inx%></a>
+        <%}) %>
+        </div>
     </div>
     <div class="lower-button" >
         <form action="/logout" method="post">
