--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,14 +1,17 @@
 <%- include('partials/header') %>
-<h1 style="float: left;"class="title"> author :<%=name %> </h1>
-<form action="/logout" method="get">
-    <button style="float: right;" type="submit" class="btn btn-primary">logout</button>
-</form>
+
 <form action="/dashboard" method="get">
-    <button style="float: right;" type="submit" class="btn btn-primary">Dashboard</button>
+    <button type="submit" >Dashboard</button>
 </form>
+
+<hr>
+<h1 class="title"> author :<%= name %> </h1>
+<hr>
+
 <form action="/newDiaries" method="get">
-    <button style="float: right;" type="submit" class="btn btn-primary">New Diary</button>
+    <button type="submit" >New Diary</button>
 </form>
+
 <div class="container">
     <div class="jumbotron centered">
         <form class="" action="/compose" method="post">
@@ -16,7 +19,7 @@
 
             <select name="diaryId">
                 <%  for(var i=0 ;i < diaries.length ;i++) { %>
-                    <option value="<%= diaries[i].diary_id %>"> <%=  diaries[i].diary_id %></option>
+                    <option value="<%= diaries[i].diary_id %>"> <%=  diaries[i].diary_name %></option>
                 <% } %>
             </select>
 
