--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,7 +5,8 @@
         <img src="images/profile-pic.jpeg" class="rounded-circle img-thumbnail w-25 " alt="...">
         <h1> <%= user.username %> </h1>
         <form action="/postAddAFriend" method="post">
-            <input hidden value="<%= user %>" name="profile">
+            <input hidden value="<%= user._id %>" name="profileId">
+            <input hidden value="<%= user.username %>" name="profileName">
             <button type="submit"  >Add As Friend</button>
         </form>
         <form action="/logout" method="post">
