--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,7 +5,7 @@
     <div class="left-navbar">
         <a href="/dashboard" class="btn btn-primary left-navbar-button" role="button" aria-pressed="true">Home</a>
         <a href="/explore" class="btn btn-primary left-navbar-button" role="button" aria-pressed="true">Explore</a>
-        <a href="/massages" class="btn btn-primary left-navbar-button" role="button" aria-pressed="true">Massages</a>
+        <a href="/messages" class="btn btn-primary left-navbar-button" role="button" aria-pressed="true">Massages</a>
         <a href="/bookmarks" class="btn btn-primary left-navbar-button" role="button" aria-pressed="true">Bookmarks</a>
     </div>
     <hr>
