--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,26 +1,39 @@
 <%- include('partials/header'); -%>
 
 
-    <hr>
-        <img src="images/profile-pic.jpeg" class="rounded-circle img-thumbnail w-25 " alt="...">
-        <h1> <%= user.username %> </h1>
-        <form action="/postAddAFriend" method="post">
-            <input hidden value="<%= user._id %>" name="profileId">
-            <input hidden value="<%= user.username %>" name="profileName">
-            <button type="submit"  >Add As Friend</button>
-        </form>
+<img src="/images/profile-pic.jpeg" class="prfile-icon" alt="...">
+<h1 class="gtp-name"> <%= user.username %> </h1>
+<form action="/postAddAFriend" method="post" class="gtp-add-f-but ">
+    <input hidden value="<%= user._id %>" name="profileId">
+    <input hidden value="<%= user.username %>" name="profileName">
+    <button type="submit" class="button-a" >Add As Friend</button>
+</form>
+<hr class="card-seperator">
 
-        <div>
-            <p> Dairies : </p>
-            <% user.myDiaries.forEach(diary => {%>
-            <form action="/getDiary/<%=diary.diary_id%>" method="get">
-                <button type="submit" ><%= diary.diary_name %></button>
-            </form>
-            <% })%>
-        </div>
-        <form action="/logout" method="post">
-            <button type="submit"> logout</button>
+<% if( isSelf === true )  {%>
+    <div class="p-d-info">
+        <form action="/myDiaries" method="get" class="form-in">
+            <button type="submit" class="button-a p-m-but"> My Dairies </button>
         </form>
+        <form action="/getFriendList" method="get" class="form-in">
+            <button type="submit" class="button-a p-m-but"> My Friends </button>
+        </form>
+    </div>
+<% } else { %>
+    <p class="p-d-sta"> Dairies by Ritik Mittal : </p>
+    <div class="p-d-info">
+        <% user.myDiaries.forEach(diary => {%>
+        <form action="/getDiary/<%=diary.diary_id%>" method="get">
+            <button type="submit" class="button-a p-d-but"><%= diary.diary_name %></button>
+        </form>
+        <% })%>
+    </div>
+<% } %>
+
+<hr class="card-seperator">
+<form action="/dashboard" method="get" class="logout">
+    <button type="submit" class="button-a"> Home </button>
+</form>
 
 
 <%- include('partials/footer'); -%>
