--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,28 +1,61 @@
+body {
+    margin: 0;
+}
 
 .left-body {
     display: inline-block;
     position: fixed;
-    background-color: floralwhite;
-    text-align: center;
-    border-right: 1px solid black;
+    background-color: white;
+    /*border-right: 1px solid black;*/
     height: 100%;
     width: 30%;
     left: 0;
 }
+.main-icon {
+    font-size: 3rem;
+    color: #20bf6b;
+    padding-top: 1rem ;
+    padding-left: 2rem;
+}
+
+.button-left-nav {
+    margin: 40px auto;
+    display: block;
+    color: #20bf6b !important;
+    font-size: 1.2rem;
+    text-align: center;
+    text-decoration: none;
+    background: #ffffff;
+    padding: 20px;
+    border: 4px solid #20bf6b !important;
+    border-radius: 6px;
+    width: 150px;
+    transition: all 0.3s ease 0s;
+}
+.button-left-nav:hover {
+    color: #494949 !important;
+    border-radius: 50px;
+    border-color: #494949 !important;
+    transition: all 0.3s ease 0s;
+}
+.button-profile-icon {
+    margin: 0px;
+}
 .mid-body {
     display: inline-block;
-    background-color: floralwhite;
     position: absolute;
     height: 100%;
     width: 50%;
     left: 30%;
 }
+.top-text-header-par {
+    text-align: right;
+}
 .right-body {
     display: inline-block;
     position: fixed;
-    background-color: floralwhite;
+    background-color: white;
     height: 100%;
-    border-left: 1px solid black;
     width: 20%;
     right: 0;
 }
@@ -36,33 +69,168 @@
     display: block;
 }
 .left-profile-div {
-    position: absolute;
-    bottom: 10%;
+    /*position: absolute;*/
+    display: inline-block;
+    width: 250px;
+    margin: 50px auto 50px auto;
+    /*bottom: 50px;*/
 }
 
 .prfile-icon {
     height: 80px;
-    border-radius: 40px;
+    display: inline;
+    border-radius: 50px;
+    border: 4px solid #20bf6b !important;
+    border-color: #20bf6b !important;
     margin: 3%;
+}
+
+.user-name-pic{
+    position: relative;
+    /*bottom: 50px;*/
+    color: #20bf6b !important;
+    font-size: 1.2rem;
+    text-align: center;
+    text-decoration: none;
+}
+.user-name-pic:hover{
+    color: #494949 !important;
 }
 .top-header {
     height: 25%;
 }
 .top-header-write {
-    padding-top: 80px;
+    display: block;
+    /*width: 100%;*/
+    padding-top: 90px;
 }
 .top-composer-text {
-    text-align: right;
-    display: inline;
-    float: right;
-    margin: 3% 10% 3% auto;
+    /*text-align: center;*/
+    display: inline-block;
+    /*margin: auto;*/
+    height: 150px;
     width: 70%;
 }
+.compose-button-top {
+    margin: 40px auto;
+    /*display: inline-block;*/
+    position: relative;
+    bottom: 90px;
+    left: 10px;
+    /*left: 250px;*/
+    color: #20bf6b !important;
+    font-size: 1rem;
+    text-align: center;
+    text-decoration: none;
+    background: #ffffff;
+    padding: 5px;
+    border: 2px solid #20bf6b !important;
+    border-radius: 6px;
+    width: 100px;
+    transition: all 0.3s ease 0s;
+}
+.compose-button-top:hover {
+    color: #494949 !important;
+    border-radius: 50px;
+    border-color: #494949 !important;
+    transition: all 0.3s ease 0s;
+}
+.text-top-header {
+    height: 100px;
+    width: 106%;
+    font-size: 1rem;
+    padding: 5px;
+    text-decoration: none;
+    overflow:hidden;
+    resize: none;
+    border-radius: 10px;
+    border: 2px solid #20bf6b !important;
+}
+.text-top-header:hover {
+    color: #494949 !important;
+    border-color: #494949 !important;
+    transition: all 0.3s ease 0s;
+}
+.text-top-header:focus{
+    outline-width: 0;
+}
+.prfile-icon-top {
+    width: 80px;
+    display: inline-block;
+    position: relative;
+    bottom: 110px;
+    border-radius: 50px;
+    border: 4px solid #20bf6b !important;
+    border-color: #20bf6b !important;
+    margin: 3%;
+}
+.card-to-show {
+    margin: 20px 0 20px 0;
+}
+.img-thumbnail-card {
+    height: 50px;
+    display: inline;
+    border-radius: 50px;
+    border: 1px solid #20bf6b !important;
+    border-color: #20bf6b !important;
+    margin: 0 0 5px 0;
+}
+.user-name-card {
+    display: inline-block;
+    position: relative;
+    /*bottom: px;*/
+    color: #20bf6b;
+    font-size: 1rem;
+    font-weight: 600;
+    padding-left: 10px;
+}
+.card-header-show {
+    padding-top: 1%;
+    padding-left : 3%;
+}
+.user-name-card:hover {
+    color: #494949;
+}
+.card-seperator{
+    height: 1px;
+    margin: 0;
+    border-width:0;
+    background-color: #20bf6b;
+}
+.card-seperator-bottom {
+    height: 1px;
+    margin: 0 0 10px 0;
+    border-width:0;
+    background-color: #20bf6b;
+}
+.card-body-show {
+    padding-left: 3%;
+    padding-right: 3%;
+}
+.card-footer-show {
+    padding : 10px;
+    text-align: center;
+}
 
+.hr-profile-dash-board {
+    height: 2px;
+    margin: 0;
+    border-width:0;
+    background-color: #20bf6b;
+}
+
+.left-bottom-section {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
 .fixed-home-directive {
-    width: 50%;
+    display: inline-block;
+    font-size: 50px;
     position: fixed;
-    z-index: 10000;
+    background-color: white;
+    z-index: 100;
     left: 30%;
     right: 20%;
 }
@@ -73,6 +241,15 @@
     text-align: center;
 }
 
+.icon-footer {
+    text-decoration: none;
+    background: #ffffff;
+    border: none;
+    color: #20bf6b;
+}
+.icon-footer:hover {
+    color : #494949 ;
+}
 .icon-like {
     position: absolute;
     left: 10%;
@@ -84,50 +261,101 @@
     position: absolute;
     right: 10%;
 }
+.num-likes {
+    position: absolute;
+    left: 15%;
+}
 
 .notice-icon {
     text-align: right;
-    margin: 3% 5% 0% auto;
+    padding-right: 8%;
+    padding-top: 5%;
     font-size: 50px;
 }
-/* Dropdown Button */
-.dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-}
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
+.rd-button-div {
+    margin: auto;
     position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    display: inline-block;
+    bottom: 30%;
+    right: 0;
+    padding : 50px;
+    /*text-align: center;*/
 }
 
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+.rd-button {
+    margin: 10px auto;
+    /*display: inline-block;*/
+    /*position: relative;
+    bottom: 85px;*/
+    /*left: 250px;*/
+    color: #20bf6b !important;
+    font-size: 1rem;
+    text-align: center;
     text-decoration: none;
-    display: block;
+    background: #ffffff;
+    padding: 5px;
+    border: 2px solid #20bf6b !important;
+    border-radius: 6px;
+    width: 100px;
+    transition: all 0.3s ease 0s;
+}
+.rd-button:hover {
+    color: #494949 !important;
+    border-radius: 50px;
+    border-color: #494949 !important;
+    transition: all 0.3s ease 0s;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.logout {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+    height: 30px;
+    width: 70px;
+}
+.form-in {
+    display: inline;
+}
+.gtp-name {
+    display: inline;
+    position: relative;
+    color:  #20bf6b;
+}
 
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.button-a {
+    color: #20bf6b !important;
+    font-size: 1.2rem;
+    text-align: center;
+    text-decoration: none;
+    background: #ffffff;
+    border: 4px solid #20bf6b !important;
+    border-radius: 6px;
+}
+.button-a:hover {
+    color: #494949 !important;
+    border-radius: 50px;
+    border-color: #494949 !important;
+    transition: all 0.3s ease 0s;
+}
+.p-d-but{
+    margin: 10px auto 10px auto;
+    width : 200px;
+}
+.p-d-sta {
+    padding-left: 10%;
+    font-size : 2rem;
+}
+.p-d-info{
+    display: block;
+    text-align: center;
+}
+.gtp-add-f-but{
+    display: inline-block;
+    position: absolute;
+    right: 50px;
+    top: 50px;
+}
+.p-m-but {
+    margin: 50px;
+}
