--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -68,7 +68,7 @@
     <div class="notice-icon">
         <span><i class="far fa-bell icon-footer"></i></span>
     </div>
-    <form action="/logout" method="post">
+    <form action="/logout" method="post" class="form-in">
         <button type="submit" class="rd-button logout"> logout </button>
     </form>
 </div>
