--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,16 +1,28 @@
 <%- include('partials/header') %>
 
 
-<div class="jumbotron centered">
-  <div class="container">
-    <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">Blogging</h1>
-    <p class="lead">Share your day!</p>
-    <hr>
-    <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
-    <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
+<div class="main-icon">
+  <span><i class="fas fa-book-open"></i></span>
+</div>
 
+
+<div >
+  <h1 class="wel-msg">Welcome to Your Own Personal Space ... </h1>
+
+  <hr class="card-seperator">
+  <div class="wel-but">
+    <form action="/register" method="get" class="form-in-f">
+      <button type="submit" class="button-a but-wl">Register</button>
+    </form>
+    <form action="/login" method="get" class="form-in-f">
+      <button type="submit" class="button-a but-wl">Login</button>
+    </form>
   </div>
+
+  <hr class="card-seperator">
+</div>
+<div class="wel-msg-2">
+  <p class="form-in-f">Write your day!</p>
 </div>
 
 <%- include('partials/footer') %>
