--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,41 +1,22 @@
 <%- include('partials/header') %>
+<div class="main-icon">
+  <span><i class="fas fa-book-open"></i></span>
+</div>
 
-<div class="container mt-5">
+<div class="cont-tp">
   <h1>Login</h1>
-
-  <div class="row">
-    <div class="col-sm-8">
-      <div class="card">
-        <div class="card-body">
-
-          <!-- Makes POST request to /login route -->
-          <form action="/login" method="POST">
-            <div class="form-group">
-              <label for="username">UserName</label>
-              <input type="text" class="form-control" name="username">
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
-            </div>
-            <button type="submit" class="btn btn-dark">Login</button>
-          </form>
-
-        </div>
+  <div class="card-tp">
+    <form action="/login" method="POST">
+      <div class="unt-inp">
+        <label for="username" class="unt-lbl">UserName</label>
+        <input type="text" class="unt-inp" name="username">
       </div>
-    </div>
-
-    <!-- <div class="col-sm-4">
-      <div class="card">
-        <div class="card-body">
-          <a class="btn btn-block" href="/auth/google" role="button">
-            <i class="fab fa-google"></i>
-            Sign In with Google
-          </a>
-        </div>
+      <div class="unt-inp">
+        <label for="password"  class="unt-lbl">Password</label>
+        <input type="password" class="unt-inp" name="password"/>
       </div>
-    </div> -->
-
+      <button type="submit" class="button-a but-tp">Login</button>
+    </form>
   </div>
 </div>
 
